err
In file included from auto-config.h:118,
                 from cross-config.h:1,
                 from config.h:6,
                 from toplev.c:26:
cross-auto-config.h:39: warning: "TARGET_NAME" redefined
   39 | #define TARGET_NAME "ns32k"
      | 
<command-line>: note: this is the location of the previous definition
toplev.c: In function ‘get_run_time’:
toplev.c:936:14: error: storage size of ‘tms’ isn’t known
  936 |   struct tms tms;
      |              ^~~
toplev.c:967:29: error: ‘HZ’ undeclared (first use in this function)
  967 | #   define TICKS_PER_SECOND HZ /* traditional UNIX */
      |                             ^~
toplev.c:971:55: note: in expansion of macro ‘TICKS_PER_SECOND’
  971 |   return (tms.tms_utime + tms.tms_stime) * (1000000 / TICKS_PER_SECOND);
      |                                                       ^~~~~~~~~~~~~~~~
toplev.c:967:29: note: each undeclared identifier is reported only once for each function it appears in
  967 | #   define TICKS_PER_SECOND HZ /* traditional UNIX */
      |                             ^~
toplev.c:971:55: note: in expansion of macro ‘TICKS_PER_SECOND’
  971 |   return (tms.tms_utime + tms.tms_stime) * (1000000 / TICKS_PER_SECOND);
      |                                                       ^~~~~~~~~~~~~~~~
toplev.c: In function ‘pfatal_with_name’:
toplev.c:1033:3: warning: incompatible implicit declaration of built-in function ‘exit’ [-Wbuiltin-declaration-mismatch]
 1033 |   exit (FATAL_EXIT_CODE);
      |   ^~~~
toplev.c:804:1: note: include ‘<stdlib.h>’ or provide a declaration of ‘exit’
  803 | #include "options.h"
  +++ |+#include <stdlib.h>
  804 |   0
toplev.c: In function ‘fatal_io_error’:
toplev.c:1041:3: warning: incompatible implicit declaration of built-in function ‘exit’ [-Wbuiltin-declaration-mismatch]
 1041 |   exit (FATAL_EXIT_CODE);
      |   ^~~~
toplev.c:1041:3: note: include ‘<stdlib.h>’ or provide a declaration of ‘exit’
toplev.c: In function ‘vfatal’:
toplev.c:1504:3: warning: incompatible implicit declaration of built-in function ‘exit’ [-Wbuiltin-declaration-mismatch]
 1504 |   exit (FATAL_EXIT_CODE);
      |   ^~~~
toplev.c:1504:3: note: include ‘<stdlib.h>’ or provide a declaration of ‘exit’
toplev.c: In function ‘xmalloc’:
toplev.c:1884:43: warning: ‘malloc’ argument 1 type is ‘unsigned int’ where ‘long unsigned int’ is expected in a call to built-in function declared without prototype [-Wbuiltin-declaration-mismatch]
 1884 |   register char *value = (char *) malloc (size);
      |                                           ^~~~
In file included from cross-config.h:2,
                 from config.h:6,
                 from toplev.c:26:
./config/alpha/xm-alpha.h:62:14: note: built-in ‘malloc’ declared here
   62 | extern void *malloc (), *realloc (), *calloc ();
      |              ^~~~~~
toplev.c: In function ‘xrealloc’:
toplev.c:1899:44: warning: ‘realloc’ argument 2 type is ‘int’ where ‘long unsigned int’ is expected in a call to built-in function declared without prototype [-Wbuiltin-declaration-mismatch]
 1899 |                   ? (char *) realloc (ptr, size)
      |                                            ^~~~
In file included from cross-config.h:2,
                 from config.h:6,
                 from toplev.c:26:
./config/alpha/xm-alpha.h:62:26: note: built-in ‘realloc’ declared here
   62 | extern void *malloc (), *realloc (), *calloc ();
      |                          ^~~~~~~
toplev.c:1900:38: warning: ‘malloc’ argument 1 type is ‘int’ where ‘long unsigned int’ is expected in a call to built-in function declared without prototype [-Wbuiltin-declaration-mismatch]
 1900 |                   : (char *) malloc (size));
      |                                      ^~~~
In file included from cross-config.h:2,
                 from config.h:6,
                 from toplev.c:26:
./config/alpha/xm-alpha.h:62:14: note: built-in ‘malloc’ declared here
   62 | extern void *malloc (), *realloc (), *calloc ();
      |              ^~~~~~
toplev.c: In function ‘output_lang_identify’:
toplev.c:2114:30: warning: ‘alloca’ argument 1 type is ‘int’ where ‘long unsigned int’ is expected in a call to built-in function declared without prototype [-Wbuiltin-declaration-mismatch]
 2114 |   char *s = (char *) alloca (len);
      |                              ^~~
In file included from cross-config.h:2,
                 from config.h:6,
                 from toplev.c:26:
./config/alpha/xm-alpha.h:48:14: note: built-in ‘alloca’ declared here
   48 | extern void *alloca ();
      |              ^~~~~~
toplev.c: In function ‘main’:
toplev.c:4358:19: warning: cast to pointer from integer of different size [-Wint-to-pointer-cast]
 4358 |       char *lim = (char *) sbrk (0);
      |                   ^
toplev.c:4360:36: warning: format ‘%d’ expects argument of type ‘int’, but argument 3 has type ‘long int’ [-Wformat=]
 4360 |       fprintf (stderr, "Data size %d.\n",
      |                                   ~^
      |                                    |
      |                                    int
      |                                   %ld
 4361 |                lim - (char *) &environ);
      |                ~~~~~~~~~~~~~~~~~~~~~~~
      |                    |
      |                    long int
toplev.c:4375:5: warning: incompatible implicit declaration of built-in function ‘exit’ [-Wbuiltin-declaration-mismatch]
 4375 |     exit (FATAL_EXIT_CODE);
      |     ^~~~
toplev.c:4375:5: note: include ‘<stdlib.h>’ or provide a declaration of ‘exit’
make: *** [Makefile:1928: toplev.o] Error 1
